--- a/css/style.css
+++ b/css/style.css
@@ -322,18 +322,62 @@ th,td {
 /* Testimonial */
 .testimonial {
     margin: 200px 0px;
+    overflow: hidden;
 }
 
-.content-testimonial {
+#content-testimonial {
     display: flex;
+    gap: 0 73px;
+    width:max-content;
 }
 
 .testimonial-item {
     display: flex;
+    padding: 66px 100px 66px 53px;
+    background: #F0F0F0;
+    max-width: 940px;
+    max-height: 340px;
+    animation: move 1.5s ease-in-out 1 forwards;
 }
 
-.testimonial-item img {
+.testimonial-item-img{
+    margin-right: 43px;
+    position: relative;
+    display: block;
+}
+
+.testimonial-item-img i{
+    padding: 12px 15px;
+    font-size: 23px;
+    font-weight: 700;
+    line-height: 110%;
+    top: 0;
+    left: 22px;
     border-radius: 50%;
+    color: #fff;
+    background: #524FF5;
+    position: absolute;
+}
+
+.testimonial-item-main {
+    border-left: 1px solid #ccc;
+    padding-left: 43px;
+}
+
+.testimonial-item-main p {
+    font-family: 'Inter';
+    font-weight: 600;
+    font-size: 25px;
+    line-height: 110%;
+    margin-bottom: 5px;
+    color: #1B2129;
+}
+
+.testimonial-item-img img {
+    border-radius: 50%;
+    object-position: center;
+    object-fit: cover;
+    /* width: 100%; */
 }
 
 .testimonial-item-main {
@@ -343,6 +387,46 @@ th,td {
 .testimonial-item-main ul {
     display: flex;
     list-style-type: none;
+    color: #FFD058;
+    margin: 16px 0px 22px 0px;
+}
+
+.testimonial-item-main .sub-testimonial-item {
+    line-height: 145%;
+    font-weight: 500;
+    font-size: 20px;
+    text-transform: capitalize;
+    color: #6A6A6A; 
+}
+
+.nav-testimonial {
+    display: flex;
+    justify-content: center;
+    gap: 0 400px;
+    margin-top: 70px;
+}
+
+.nav-testimonial a {
+    font-size: 30px;
+    padding: 20px 30px;
+    color: #FFFFFF;
+    background: #1C2128;
+    border-radius: 50%;
+}
+
+.nav-testimonial a:hover {
+    cursor: pointer;
+    background: #7572F7;
+    transition: 0.2s;
+}
+
+@keyframes move {
+    from {
+        transform: translate(100%);
+    }
+    to {
+        transform: translate(0);
+    }
 }
 
 /* Team */
@@ -527,7 +611,7 @@ th,td {
     margin-right: 10px;
 }
 
-.fa-star {
+.pack-item .fa-star {
     color:  #2421D9;
     margin-right: 10px;
 }
@@ -550,6 +634,12 @@ th,td {
     color: #1B2129;
 }
 
+.pricing-item .button-item-green {
+    width: fit-content;
+    margin-left: 76px;
+    padding: 6px 20px;
+}
+
 .main-item {
     margin: 27px 0px 60px 0px;
     line-height: 252%;
@@ -561,6 +651,14 @@ th,td {
     line-height: 252%;
     text-transform: capitalize;
     color: #6A6A6A;
+}
+
+.main-item a {
+    text-decoration: none;
+    font-weight: 700;
+    line-height: 252%;
+    text-transform: capitalize;
+    color: #1B2129;
 }
 
 .main-item p::first-line {
@@ -588,12 +686,25 @@ th,td {
     gap: 16px;
 }
 
+.news-item-date .button-item-white {
+    padding: 0px 13px;
+    color: #1B2129;
+}
+
+.date {
+    color: #524FF5;
+}
+
 .news-item-main {
     margin: 32px 0px 54px 0px;
 }
 
 .news-img {
     background-image: url('../img/new.png');
+    color: #fff;
+}
+
+.news-img .news-item-main p {
     color: #fff;
 }
 
@@ -618,9 +729,14 @@ th,td {
 .img-footer .name-header {
     position: absolute;
     margin: 0;
-    top: 40%;
-    left: 38%;
+    top: 50%;
+    left: 50%;
     color: #fff;
+    transform: translate(-50%);
+}
+
+.img-footer a {
+    color: #fff;    
 }
 
 .footer-main {
@@ -629,16 +745,24 @@ th,td {
 }
 
 .footer-item {
-    flex-grow: 2;
+    width: 100%;    
+}
+
+.sub-footer-item {
+    line-height: 145%;
+    text-transform: capitalize;
+    color: #BCBCBC;
+    margin: 17px 0px 48px 0px;
 }
 
 .contact {
-    background: #485059;
+    background: #242A32;
     padding: 36px 217px 36px 37px;
 }
 
 .contact p {
     margin: 20px 0px;
+    color: #BCBCBC;
 }
 
 .contact p::first-line {
@@ -692,4 +816,19 @@ th,td {
     gap: 18px;
     font-size: 30px;
     color: #fff;
+}
+
+.copyright {
+    margin: 32px 0px 26px 0px;
+    background: #fff;
+    text-align: center;
+    line-height: 242.5%;
+    text-transform: capitalize;
+    color: #6A6A6A;
+}
+
+.copyright a {
+    text-decoration: none;
+    color: #524FF5;
+    font-weight: 700;
 }
